# DREAMWork

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
data/dossiers/firm/: f1.md  f_breakthrough_energy.md  f_toyota_climate_fund.md
docs/: architecture.md  data-model.md  module-contracts.md  onboarding-flow-proposal.md  pipeline.md
dreamwork/: __init__.py  config.py
dreamwork/core/: __init__.py  domain.py  dossiers.py  memory_store.py  repository.py
dreamwork/mcp_server/: __init__.py  __main__.py  server.py
dreamwork/modules/: __init__.py
dreamwork/modules/dashboard/: __init__.py
dreamwork/modules/onboarding/: __init__.py  build.py  coerce.py  importer.py  mapping.py  provenance.py  records.py
dreamwork/modules/onboarding/sources/: __init__.py  notion.py  tabular.py
dreamwork/modules/qualified_list/: __init__.py  schema.sql  store.py
dreamwork/web/: __init__.py  api.py  demo_seed.py
prototypes/dashboard-web/: README.md  index.html
prototypes/dashboard-web/css/: styles.css
prototypes/dashboard-web/js/: api.js  app.js  data.js  utils.js  views.js
tests/: test_onboarding.py  test_onboarding_notion.py  test_qualified_list.py  test_repository_contract.py  test_smoke.py  test_web_api.py
