[project]
name = "dreamwork"
version = "0.0.1"
description = "A fundraising CRM for the Extantia portfolio."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",          # the MCP server SDK (FastMCP)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Only needed to import a live Notion database (onboarding). Everything else runs without it.
notion = ["notion-client>=2.2"]
# Chris's Postgres Repository will add its driver here, e.g.:
# postgres = ["psycopg[binary]>=3.2", "sqlalchemy>=2.0"]

[project.scripts]
dreamwork-mcp = "dreamwork.mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dreamwork*"]

[tool.ruff]
line-length = 100
